Patching vendor publish

--- a/packages/kielpack/laralibs/composer.json
+++ b/packages/kielpack/laralibs/composer.json
@@ -23,7 +23,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "KielPack\\Laralibs\\Providers\\LaraLibProvider"
+                "KielPack\\Laralibs\\LaraLibProvider"
             ],
             "aliases":{
                 "Bundle": "KielPack\\Laralibs\\Supports\\Facades\\Bundle",
