--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "psr-4": {
             "App\\": "app/",
             "KielPack\\LaraLibs\\": "packages/kielpack/laralibs/src",
-            "Sunriseco\\Properties\\": "packages/sunriseco/properties/src"
+            "Sunriseco\\Properties\\": "packages/sunriseco/properties/src",
+            "Sunriseco\\Accounts\\": "packages/sunriseco/accounts/src"
         }
     },
     "autoload-dev": {
