--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
         "psr-4": {
             "App\\": "app/",
             "KielPack\\LaraLibs\\": "packages/kielpack/laralibs/src",
+            
             "Sunriseco\\Properties\\": "packages/sunriseco/properties/src",
-            "Sunriseco\\Accounts\\": "packages/sunriseco/accounts/src"
+            "Sunriseco\\Accounts\\": "packages/sunriseco/accounts/src",
+            "Sunriseco\\Tenants\\": "packages/sunriseco/tenants/src"
         }
     },
     "autoload-dev": {
